# ethrin

./: .gitignore  CMakeCache.txt  Makefile  README.md  build.sh  cmake_install.cmake  license  qemu.sh
src/: CMakeLists.txt  math.cpp  stdio.cpp  string.cpp
src/boot/: gdt.asm  grub.cfg  idt.asm  interrupt.asm
src/calloc/: calloc.cpp
src/devices/: pci.cpp  pci_common.cpp  pci_default.cpp
src/fonts/: psf.cpp
src/graphics/: graphics.cpp
src/include/: math.h  stdarg.h  stddef.h  stdint.h  stdlib.h  string.h  system.h  unistd.h
src/include/calloc/: calloc.h
src/include/devices/: pci.h  pci_common.h  pci_default.h
src/include/fonts/: psf.h
src/include/graphics/: colors.h  graphics.h
src/include/malloc/: malloc.h
src/include/memcpy/: memcpy.h
src/include/memset/: memset.h
src/include/notify/: notify.h
src/include/stdio/: stdio.h
src/include/sys/: portio.h  portio.hpp
src/include/tables/: gdt.h  idt.h  interrupt.s  isr.h
src/include/vesa/: vesa.h
src/include/vfs/: dev.h  vfs.h
src/malloc/: malloc.cpp
src/memcpy/: memcpy.cpp
src/memset/: memset.cpp
src/minikernel/: minikernel.cpp
src/notify/: notify.cpp
src/sys/: portio.c
src/tables/: gdt.cpp  idt.cpp  isr.cpp
src/vesa/: vesa.cpp
src/vfs/: dev.cpp  vfs.cpp
supported_devices/i686-pc-none-elf/: i686.cpp
supported_devices/i686-pc-none-elf/boot/: boot.asm  linker.ld
